# yrvera-20k

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
docs/: _config.yml  index.md
docs/plans/: 2026-04-22-bink-audio-design.md  2026-04-22-bink-audio-plan.md  2026-04-24-bik-player-picker-design.md  2026-04-24-bik-player-picker-plan.md
src/: app.rs  app_building_anim.rs  app_commands.rs  app_context_order.rs  app_cursor.rs  app_debug_overlays.rs  app_debug_panel.rs  app_entity_pick.rs  app_init.rs  app_init_helpers.rs  app_input.rs  app_render_tests.rs  app_save_load_panel.rs  app_selection_brackets.rs  app_sidebar_build.rs  app_sidebar_render.rs  app_sim_tick.rs  app_skirmish.rs  app_spawn_pick.rs  app_target_lines.rs  app_transitions.rs  app_ui_overlays.rs  bridge_re.rs
src/app_instances/: overlays.rs  shp.rs  units.rs
src/app_render/: build_instances.rs  draw_passes.rs  merge_passes.rs  mod.rs
src/assets/: asset_manager.rs  aud_file.rs  audio_bag.rs  bink_audio.rs  bink_audio_data.rs  bink_bits.rs  bink_data.rs  bink_decode.rs  bink_file.rs  error.rs  fnt_file.rs  mix_crypto.rs  mod.rs  shp_file.rs  tmp_file.rs  vxl_file.rs  xcc_database.rs
src/audio/: music.rs  sfx.rs
src/map/: lat.rs  mod.rs  overlay.rs  overlay_types.rs  resolved_terrain.rs  terrain.rs  waypoints.rs
src/render/: batch.rs  minimap.rs  minimap_tests.rs  selection_overlay.rs  shroud_buffer.rs  sidebar_cameo_atlas.rs  sidebar_chrome.rs  vxl_raster.rs
src/rules/: art_data.rs  house_colors.rs  jumpjet_params.rs  locomotor_type.rs  mod.rs  object_type.rs  ruleset.rs  superweapon_type.rs  terrain_rules.rs  warhead_type.rs  weapon_type.rs
src/sidebar/: mod.rs  power_bar_anim.rs  sidebar_view.rs
src/sim/: ai.rs  animation.rs  animation_tests.rs  bridge_specs.rs  bridge_state.rs  command.rs  components.rs  entity_store.rs  game_entity.rs  game_options.rs  house_state.rs  intern.rs  mod.rs  occupancy.rs  ore_growth.rs  overlay_grid.rs  passenger.rs  power_system.rs  radar.rs  slave_miner.rs  snapshot.rs  trigger_runtime.rs  trigger_runtime_tests.rs
src/sim/aircraft/: attack_mission.rs  idle_mode.rs  mod.rs
src/sim/combat/: cell_spread.rs  combat_aoe.rs  combat_fire_gate.rs  combat_targeting.rs  combat_tests.rs  combat_weapon.rs  mod.rs
src/sim/docking/: aircraft_dock.rs
src/sim/miner/: miner_dock_sequence.rs  miner_system.rs  miner_tests.rs  mod.rs
src/sim/movement/: air_movement.rs  bump_crush.rs  drive_track.rs  droppod_movement.rs  group_destination.rs  jumpjet_movement.rs  locomotor.rs  locomotor_tests.rs  mod.rs  movement_blocked.rs  movement_bridge.rs  movement_commands.rs  movement_occupancy.rs  movement_path.rs  movement_reservation.rs  movement_step.rs  movement_tests.rs  movement_tick.rs  rocket_movement.rs  scatter.rs  teleport_movement.rs  tunnel_movement.rs  turret.rs
src/sim/pathfinding/: cell_entry.rs  core.rs  core_tests.rs  mod.rs  passability.rs  path_smooth.rs  path_smooth_tests.rs  terrain_cost.rs  terrain_speed.rs  zone_build.rs  zone_hierarchy.rs  zone_incremental.rs  zone_map.rs  zone_map_tests.rs  zone_search.rs  zone_search_tests.rs
src/sim/production/: mod.rs  production_queue.rs  (+8 more)
src/ui/: in_game_hud.rs  main_menu.rs
src/util/: config.rs  facing_table.rs  fixed_math.rs  lepton.rs  mod.rs
tests/: audio_bag_test.rs  audio_debug.rs  bink_audio_samples.rs  bink_first_frame.rs  bink_frame_diff.rs  bridge_bayopig.rs  buildngz_inspect.rs  cameo_search.rs  debug_mix_hashes.rs  extract_ini_files.rs  music_debug.rs  overlay_compression_verify.rs  overlay_ids.rs  pip_export.rs  place_check.rs  placement_diagnostic.rs  refinery_live_rules.rs  rules_loading.rs  shp_export.rs  sidebar_assets.rs  sidebar_chrome_inspect.rs  sidebar_mix_browser.rs  tile_coverage.rs  vxl_render.rs
(+17 files in other folders)
